# nocturne-spine

./: .dockerignore  .gitignore  AGENTS.md  BOOTSTRAP_REPORT.md  CLAUDE.md  DECISIONS.md  Dockerfile  alembic.ini  docker-compose.yml  openapi.json  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: SPEC.md
infra/billing-breaker/: .gcloudignore  README.md  billing_breaker.py  deploy.sh  deployment_checks.py  main.py  requirements.txt
scripts/: generate_openapi.py
src/spine/: __init__.py  auth.py  config.py  contracts.py  ids.py  main.py  problems.py  tokens.py
src/spine/db/: __init__.py  engine.py  memory.py  models.py  session.py
src/spine/embeddings/: __init__.py
src/spine/events/: __init__.py
src/spine/inject/: __init__.py  decisions.py  renderer.py  router.py  scorer.py  service.py
src/spine/memory/: __init__.py  router.py  service.py
tests/: conftest.py  test_api.py  test_billing_breaker.py  test_commit_feedback_api.py  test_config.py  test_db.py  test_embeddings.py  test_ids.py  test_inject_api.py  test_inject_scorer.py  test_memory_api.py  test_memory_service.py  test_migration.py  test_search_api.py  test_tokens.py
tests/fixtures/billing_breaker/: above_budget.json  (+2 more)
verification/: README.md
verification/bootstrap/: README.md
verification/d1/: README.md  cloud-state.json
verification/d2/: README.md
verification/s1/: README.md
verification/s2/: README.md
verification/s3/: README.md
verification/s4/: README.md
verification/s5/: README.md
verification/s6/: README.md
verification/s7/: README.md
(+4 files in other folders)
