[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "n8-spine"
version = "0.1.0"
description = "M1 memory spine scaffold"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2",
  "asyncpg>=0.29,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pgvector>=0.3,<1",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "sqlalchemy[asyncio]>=2,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.9,<1",
  "testcontainers[postgres]>=4.8,<5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spine"]

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
